# Guideline

./: README.md
template/: README.TXT
template/example/: main.c
template/search_dir/: CMakeLists.txt  README.TXT
template/search_dir/include/: inc_e_holmes.h  inc_g_lestrade.h  inc_j_moriarty.h  inc_j_watson.h  inc_m_holmes.h  inc_m_hooper.h  inc_m_hudson.h  inc_m_watson.h  inc_s_holmes.h
template/search_dir/source/: e_holmes.c  g_lestrade.c  j_moriarty.c  j_watson.c  m_holmes.c  m_hooper.c  m_hudson.c  m_watson.c  s_holmes.c
